# DiVML

./: .gitignore  MaxLik2.py  MaxLik2_torch.py  MaxLik2_torchp.py  README.md  backup_MaxLik2_torch.py  clustertest.txt  pyproject.toml  requirements.txt  sandbox.py  setup.py
DiVML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backups/: MaxLik.py  old_ml_renorm.py
docs/: backend.html  dvml.html  index.html  search.js
docs/backend/: backend_template.html  dummy_backend.html  numpy_backend.html  pytorch_backend.html
docs/dvml/: backend.html
docs/dvml/backend/: backend_template.html  dummy_backend.html  numpy_backend.html  pytorch_backend.html
dvml/: __init__.py  face.py  utils.py
dvml/backend/: __init__.py  backend_template.py  dummy_backend.py  numpy_backend.py  pytorch_backend.py
protos/: MaxLik2.py  MaxLik2_torch.py  lininv.py
tests/: basic_tests.py  clustertest.txt  image_recon.py  paralel_single_qubit_renorm.py  paralel_two_qubit.py  six_qubits.py  test.py  two_qubit_process.py
