[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiVML"
version = "0.0.1"
authors = [
  { name="Robert Starek", email="author@example.com" },
]
description = "Discrete-variable quantum state maximum-likelihood reconstruction"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "numba",
]
# license = "MIT"
# license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/RobStarek/dvml"